--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply text-2xl;
+    @apply my-3;
+    @apply font-bold;
+  }
+  h2 {
+    @apply text-xl;
+    @apply my-2;
+    @apply font-bold;
+  }
+  h3 {
+    @apply text-lg;
+    @apply my-1;
+    @apply font-bold;
+  }
+  p {
+    @apply mt-2;
+  }
+}
+
+@keyframes appear-from-below {
+  from {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 #__next {
   height: 100%;
 }
@@ -28,6 +60,30 @@
   border-radius: 16px;
   box-shadow: inset 0 0 14px 14px #3B4368;
   border: solid 2px transparent;
+}
+
+.scrollbar-default::-webkit-scrollbar-thumb {
+  border-radius: 16px;
+  box-shadow: inset 0 0 14px 14px #3B4368;
+  border: solid 2px transparent;
+}
+
+.scrollbar-default::-webkit-scrollbar {
+  height: 0.55rem;
+  width: 0.55rem;
+  background-color: transparent;
+}
+
+.scrollbar-light::-webkit-scrollbar-thumb {
+  border-radius: 16px;
+  box-shadow: inset 0 0 14px 14px #BEC3DA;
+  border: solid 2px transparent;
+}
+
+.scrollbar-light::-webkit-scrollbar {
+  height: 0.55rem;
+  width: 0.55rem;
+  background-color: transparent;
 }
 
 @keyframes bounce-up {
