--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,18 @@
   }
 }
 
+@keyframes hover {
+  0% {
+      transform: scale(1.0);
+  }
+  50% {
+       transform: scale(1.1);
+   }
+  100% {
+        transform: scale(1.0);
+  }
+}
+
 @keyframes appear-from-below {
   from {
     transform: translateY(200px);
