--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,47 +58,55 @@
 
 @media screen and (min-width: 640px) {
   .scrollbar::-webkit-scrollbar-button:end {
-    height: 66px;
+    height: 73px;
   }
 
   .scrollbar::-webkit-scrollbar-button:start {
-    height: 94px;
+    height: 66px;
+  }
+
+  .scrollbar-light::-webkit-scrollbar-button:end {
+    height: 73px;
+  }
+
+  .scrollbar-light::-webkit-scrollbar-button:start {
+    height: 66px;
   }
 }
 
 .scrollbar::-webkit-scrollbar {
-  height: 0.55rem;
-  width: 0.55rem;
+  height: 0.7rem;
+  width: 0.7rem;
   background-color: transparent;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
   border-radius: 16px;
-  box-shadow: inset 0 0 14px 14px #cbe0f2;
+  box-shadow: inset 0 0 14px 14px #00398c;
   border: solid 2px transparent;
 }
 
 .scrollbar-default::-webkit-scrollbar-thumb {
   border-radius: 16px;
-  box-shadow: inset 0 0 14px 14px #cbe0f2;
+  box-shadow: inset 0 0 14px 14px #00398c;
   border: solid 2px transparent;
 }
 
 .scrollbar-default::-webkit-scrollbar {
-  height: 0.55rem;
-  width: 0.55rem;
+  height: 0.7rem;
+  width: 0.7rem;
   background-color: transparent;
 }
 
 .scrollbar-light::-webkit-scrollbar-thumb {
   border-radius: 16px;
-  box-shadow: inset 0 0 14px 14px #BEC3DA;
+  box-shadow: inset 0 0 14px 14px #c4d9ff;
   border: solid 2px transparent;
 }
 
 .scrollbar-light::-webkit-scrollbar {
-  height: 0.55rem;
-  width: 0.55rem;
+  height: 0.7rem;
+  width: 0.7rem;
   background-color: transparent;
 }
 
